--- a/index.html
+++ b/index.html
@@ -436,22 +436,23 @@
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.jpg);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="https://miniproject.azurewebsites.net" target="_blank">NGO Management System</a></h3>
-                            <span>Web Application</span>
+                            <h3><a href="https://github.com/jitendrapal16/NGO-Management-System.git" target="_blank">NGO Management System</a></h3>
+                            <span>Web Application (Java)</span>
                         </div>
                     </div>
 		</a>
                 </div>
+		<a href="#">
                 <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.png);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="#">Next Project Name</a></h3>
-                            <span>Next Project Type</span>
+                            <h3><a href="https://github.com/jitendrapal16/NGO-Management-System.git" target="_blank">TimeSheet Management System</a></h3>
+                            <span>Self Learning Project using - Node JS (Firebase + PWA)</span>
                         </div>
                     </div>
                 </div>
-
+		    </a>
                 <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.png);">
                         <div class="overlay"></div>
