--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <span class="subheading">Hey! I am</span>
                         <h1>Jitendra Pal</h1>
                         <h2>I'm a
-                            <span class="txt-rotate" data-period="2000" data-rotate='[ "Software-Developer.", "Web-Designer.", "Programmer." ]'></span>
+                            <span class="txt-rotate" data-period="2000" data-rotate='[ "DevSecOps Engineer.", "Site Reliability Engineer.", "Cloud Engineer." ]'></span>
                         </h2>
                     </div>
                 </div>
@@ -224,11 +224,11 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date"><font color="#6600cc">Fresher</font></span>
+                                <span class="date"><font color="#6600cc">N******</font></span>
                                 <h2>
-                                    <font color="#ff3300">Software Developer</font>
+                                    <font color="#ff3300">DevSecOps Engineer</font>
                                 </h2>
-                                <span class="position">Learning</span>
+                                <span class="position">Full-time</span>
                             </div>
                         </div>
                     </div>
@@ -243,13 +243,14 @@
                                     <!-- Progress bar 1 -->
                                     <div class="skilist">
                                         <li style="list-style: none;">
-                                            <ul>Java</ul>
-                                            <ul>C/C++</ul>
-                                            <ul>Data-Structure</ul>
-                                            <ul>HTML</ul>
-                                            <ul>CSS</ul>
+                                            <ul>AWS</ul>
                                             <ul>JavaScript</ul>
-                                            <ul>SQL</ul>
+                                            <ul>CICD</ul>
+                                            <ul>Terraform</ul>
+					    <ul>Docker/K8s</ul>
+                                            <ul>Python Scripting</ul>
+                                            <ul>Git/Linux</ul>
+                                            <ul>Java</ul>
                                         </li>
                                     </div>
                                     <!-- END -->
@@ -271,7 +272,6 @@
                                             <ul>Problem Solving</ul>
                                             <ul>Decision Making</ul>
                                             <ul>Time Management</ul>
-                                            <ul>Leadership Skill</ul>
                                         </li>
                                         <!-- END -->
 
@@ -444,7 +444,7 @@
                 </div>
 		<a href="#">
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.png);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tms.jpg);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="https://github.com/jitendrapal16/NGO-Management-System.git" target="_blank">TimeSheet Management System</a></h3>
@@ -457,8 +457,8 @@
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.png);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="#">Next to Next Project Name</a></h3>
-                            <span>Next to Next Project Type</span>
+                            <h3><a href="#">Next Project Name</a></h3>
+                            <span>Next Project Type</span>
                         </div>
                     </div>
                 </div>
